2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/Makefile.am: updates for release
	* doc/man/strsctp.refs: updates for release
	* doc/man/man3/xti_sctp.3.man: updates for release
	* doc/man/man4/tpiperf.4.man: updates for release
	* doc/man/man7/npi_sctp.7.man: updates for release
	* doc/man/man7/tpi_sctp.7.man: updates for release
	* doc/man/man8/test-sctp.8.man: updates for release
	* doc/man/man8/test-sctp_nc.8.man: updates for release
	* doc/man/man8/test-sctp_ns.8.man: updates for release
	* doc/manual/todo.texi: updates for release
	* src/modules/tpiperf.c: correction and notes

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: added config file
	* doc/man/Makefile.am: added missing manpages
	* doc/manual/news.texi: updated release notes
	* Makefile.am: removed AUTOCONFIG_H
	* src/include/Makefile.am: added config file, parameterized
	* src/include/sys/strsctp/version.h.in: added comments

	* doc/man/man4/tpiperf.4.man: added missing manpage
	* doc/man/man8/test-interop.8.man: added missing manpage
	* doc/man/man8/test-sctp_n2.8.man: added missing manpage
	* doc/man/man8/test-xxx.8.man: added missing manpage
	* src/include/sys/strsctp/config.h.in: added config.h file

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4:
	* strsctp.spec.in: corrections, cooked manpages and documentation
	* debian/changelog: notes
	* debian/control.in: mostly text description formatting
	* debian/strsctp-core.postinst.in: copyright header updates
	* debian/strsctp-core.postrm.in: copyright header updates